--- a/detail.html
+++ b/detail.html
@@ -561,7 +561,9 @@
     </div>
     <!-- 整个底部盒子start -->
 </body>
+<script src="./js/data.js"></script>
 <script src="./js/jquery.js"></script>
 <script src="./js/detail.js"></script>
+<script src="./js/cart.js"></script>
 
 </html>
