--- a/cart.html
+++ b/cart.html
@@ -3,21 +3,24 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>手机列表-品优购</title>
+    <title>购物车-品优购</title>
     <meta name="description" content="品优购-专业的综合网上购物商城,销售家电、数码通讯、电脑、家居百货、服装服饰、母婴、图书、食品等数万个品牌优质商品.便捷、诚信的服务，为您提供愉悦的网上购物体验!" />
     <meta name="Keywords" content="网上购物,网上商城,手机,笔记本,电脑,MP3,CD,VCD,DV,相机,数码,配件,手表,存储卡,京东" />
     <!-- ico图标的引入 -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <!-- 先引入我们的初始化css -->
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="./css/jquery-ui.css">
     <!-- 再引入我们的 公共样式文件 -->
     <link rel="stylesheet" href="css/common.css">
     <!-- 再引入我们的 list样式文件 -->
     <link rel="stylesheet" href="css/list.css">
+    <link rel="stylesheet" href="css/cart.css">
 
 </head>
 
 <body>
+
     <!-- 整个顶部盒子start -->
     <div class="nav-top">
         <!-- 快捷导航模块开始 -->
@@ -95,9 +98,9 @@
         <!-- nav部分 -->
         <div class="nav w">
             <ul class="list-nav-l fl">
-                <li><a href="">品优秒杀</a></li>
-                <li><a href="">品优秒杀</a></li>
-                <li><a href="">品优秒杀</a></li>
+                <li><a href="./list.html">品优秒杀</a></li>
+                <li><a href="./list.html">品优秒杀</a></li>
+                <li><a href="./list.html">品优秒杀</a></li>
             </ul>
             <ul class="list-nav-r fl">
                 <li><a href="#">女装</a></li>
@@ -119,63 +122,79 @@
     <!-- 内容区 -->
     <div class="main">
         <div class="w">
-            <div class="shoes">
-                <img src="upload/bg_03.png" alt="">
+            <div class="empty-tip tc">
+                你的购物车空空如也，快去<a href="./list.html">购物</a>吧！！！
             </div>
-
-            <!-- 产品列表 product  goods  产品的意思 -->
-            <div class="goods-list clearfix">
-                <ul>
-                    <!-- `<li class="goods-list-item">
-            <a href="detail.html">
-              <div class="item-img">
-                <img src="${e.imgSrc}" alt="">
-              </div>
-              <div class="item-title">
-                ${e.name}
-              </div>
-              <div class="item-price">
-                <span class="now">${e.price}</span> <s>￥6988</s>
-              </div>
-              <div class="sold">
-                <span> 已售 <em>${e.percent}%</em></span>
-                <div class="scroll">
-                  <div class="per" style="width:${e.percent}%"></div>
-                </div>
-                <span>剩余<i>${e.left}</i>件</span>
-              </div>
-            </a>
-            <a href="#" class="buy">
-              查看详情
-            </a>
-          </li>`; -->
-                </ul>
-            </div>
-
-
-            <div class="page">
-                <ul>
-                    <li class="prev">
-                        <<上一页</li>
-                            <li>1
-                            </li>
-                            <li>2</li>
-                            <li>3</li>
-                            <li>4</li>
-                            <li>5</li>
-                            <li>6</li>
-                            <li>...</li>
-                            <li class="next">下一页>></li>
-                </ul>
-                <div class="total">
-                    共10页 到第 <input type="text"> 页 <button>确定</button>
-
+            <div class="cart-header hidden">
+                <div class="row">
+                    <div class=" cell col-1">
+                        <input type="checkbox" class="pick-all" checked>全选
+                    </div>
+                    <div class="cell col-4">商品</div>
+                    <div class="cell col-1">价格</div>
+                    <div class="cell col-1">数量</div>
+                    <div class="cell col-1">小计</div>
+                    <div class="cell col-1">操作</div>
                 </div>
             </div>
+
+            <!-- 所有在购物车里面的商品 -->
+            <div class="item-list">
+                <!-- <div class="item" data-id="6">
+          <div class="row">
+            <div class="cell col-1 row">
+              <div class="cell col-1">
+                <input type="checkbox" class="item-ck" checked="">
+              </div>
+              <div class="cell col-4">
+                <img src="./images/5b0fbaabN3229c7a3.jpg" alt="">
+              </div>
+            </div>
+            <div class="cell col-4 row">
+              <div class="item-name">荣耀V20 胡歌同款 麒麟980芯片 魅眼全视屏 4800万深感相机 6GB+128GB 幻夜黑 移动联通电信4G全面屏手机</div>
+            </div>
+            <div class="cell col-1 tc lh70">
+              <span>￥</span>
+              <em class="price">4158</em>
+            </div>
+            <div class="cell col-1 tc lh70">
+              <div class="item-count">
+                <a href="javascript:void(0);" class="reduce fl">-</a>
+                <input autocomplete="off" type="text" class="number fl" value="1">
+                <a href="javascript:void(0);" class="add fl">+</a>
+              </div>
+            </div>
+            <div class="cell col-1 tc lh70">
+              <span>￥</span>
+              <em class="computed">4158</em>
+            </div>
+            <div class="cell col-1">
+              <a href="javascript:void(0);" class="item-del">从购物车中移除</a>
+            </div>
+          </div>
+        </div> -->
+
+            </div>
+
+            <div class="total-of hidden">
+                <div class="row w">
+                    <div class="cell col-1">
+                        <input type="checkbox" class="pick-all" checked>全选
+                    </div>
+                    <div class="cell col-1 tc">
+                        已经选择<span class="selected">0</span>件商品
+                    </div>
+                    <div class="cell col-1 tc">
+                        总计：￥<span class="total-money">0</span>
+                    </div>
+                    <div class="cell col-1 tc">
+                        <a href="javascript:void(0);" class="settlement">去结算</a>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
-
-
 
 
 
@@ -304,11 +323,15 @@
         </div>
     </div>
     <!-- 整个底部盒子start -->
+    <div class="mask hidden"></div>
+
+    <div id="dialog-confirm" title="确认要删除吗？">
+        <p><span class="ui-icon ui-icon-alert"></span>这些项目将被永久删除，并且无法恢复。您确定吗？</p>
+    </div>
 </body>
-<!-- 生成列表需要使用一个数组，数组存储在data.js里面，引入才可以使用 -->
-<script src="./js/data.js"></script>
 <script src="./js/jquery.js"></script>
-<script src="./js/list.js"></script>
 <script src="./js/cart.js"></script>
+<script src="./js/layer/layer.js"></script>
+<script src="./js/index.js"></script>
 
 </html>
